--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
 <html>
-    <body>hola mundo</body>  
+    <head>
+        <tittle>mi pagina</tittle>
+    </head>
+    <body>hola mundo</body>
 </html>
